Commit reglage scroll

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="viewmoney">
         <div class="moneyview">
             <h3>SOLDE</h3>
-            <img id="downarrow" src="./downarraw.svg" alt="" srcset="">
+            <img id="downarrow" src="./downarraw.svg" alt="Fleche vers le bas">
         </div>
     </section>
 </main>
