Commit reglage scroll

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <main>
     <section class="viewmoney">
+        <div class="bubble">1397,97€</div>
         <div class="moneyview">
             <h3>SOLDE</h3>
             <img id="downarrow" src="./downarraw.svg" alt="Fleche vers le bas">
